feat: support object storage collection
